--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <title>Product</title>
 </head>
+
 <body>
     <section>
         <div class="container">
@@ -15,8 +17,10 @@
                     <h2 class="title">Start your Journey as <br>
                         Influencer
                     </h2>
-                    <p class="detail">As you probably already know, you can become an Instagram influencer by working with brands you love. Once you have thousands of followers under your belt, you can start reaching out to brands</p>
-                    
+                    <p class="detail">As you probably already know, you can become an Instagram influencer by working
+                        with brands you love. Once you have thousands of followers under your belt, you can start
+                        reaching out to brands</p>
+
                     <button class="gb">Preebook now</button>
                 </div>
                 <div class="image">
@@ -26,6 +30,7 @@
             </div>
         </div>
     </section>
-    
+
 </body>
+
 </html>
