--- a/index.html
+++ b/index.html
@@ -30,7 +30,19 @@
             </div>
         </div>
     </section>
-
+<!-- image of logo -->
+<section>
+    <div class="container">
+        <div class="image-company">
+            <img src="logos/Alibaba.svg" alt="">
+            <img src="logos/Amazon.svg" alt="">
+            <img src="logos/Ebay.svg" alt="">
+            <img src="logos/Daraz.pk Logo.svg" alt="">
+            <img src="logos/Rakuten.svg" alt="">
+            <img src="logos/Target.svg" alt="">
+        </div>
+    </div>
+</section>
 </body>
 
 </html>
