--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/68536b0b30.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
     <title>Product</title>
 </head>
@@ -30,19 +31,190 @@
             </div>
         </div>
     </section>
-<!-- image of logo -->
-<section>
-    <div class="container">
-        <div class="image-company">
-            <img src="logos/Alibaba.svg" alt="">
-            <img src="logos/Amazon.svg" alt="">
-            <img src="logos/Ebay.svg" alt="">
-            <img src="logos/Daraz.pk Logo.svg" alt="">
-            <img src="logos/Rakuten.svg" alt="">
-            <img src="logos/Target.svg" alt="">
+    <!-- image of logo -->
+    <section>
+        <div class="container">
+            <div class="image-company">
+                <img src="logos/Alibaba.svg" alt="">
+                <img src="logos/Amazon.svg" alt="">
+                <img src="logos/Ebay.svg" alt="">
+                <img src="logos/Daraz.pk Logo.svg" alt="">
+                <img src="logos/Rakuten.svg" alt="">
+                <img src="logos/Target.svg" alt="">
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+
+
+    <section>
+        <div class="container">
+            <h2 class="blo-title">Popular Collection</h2>
+            <article class="blogs-title">
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/tripod.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+            </article>
+        </div>
+    </section>
 </body>
 
 </html>
