--- a/index.html
+++ b/index.html
@@ -215,6 +215,23 @@
             </article>
         </div>
     </section>
+
+    <section>
+        <div class="container">
+            <div class="moden">
+                <div class="moden-image">
+                    <img src="image/gear.png" alt="">
+                </div>
+                <div class="mode-info">
+                    <h2 class="in-title">Featured products at one place</h2>
+                    <p class="detail">
+                        First of all, you will need to find out what’s the type of influencer you are. A word that will come to your mind is a real-life or genuine influencer. When it comes to your production and preparation for a shoot, you should consider what type of audience you are engaging with. Will you be trying to reach a mass audience? Or you want to engage a smaller audience? A brand or an individual? A small or a big group of people? Or you just want to get free stuff for mentioning your brand on social media? It is about your choices. You can even go for a proper entrepreneur. Then, you should keep in mind that your social media audience can be any type of audience. For the sake of this article, I will choose to focus on the most common audience type, an influencer targeting for exposure.
+                    </p>
+                    <button class="gb">Preebook now</button>
+                </div>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
