--- a/index.html
+++ b/index.html
@@ -235,6 +235,19 @@
             </div>
         </div>
     </section>
+    <footer>
+        <div class="container">
+           <h2 class="name-company">Influencer products</h2> 
+           <p class="compny-title">Copyright © 2022 influencer products</p>
+           <p class="com-right">All rights reserved</p>
+           <div class="icon">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-dribbble"></i>
+            <i class="fab fa-twitter"></i>
+            <i class="fab fa-youtube"></i>
+           </div>
+        </div>
+    </footer>
 </body>
 
 </html>
