--- a/index.html
+++ b/index.html
@@ -6,11 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/68536b0b30.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="responsibe.css">
     <link rel="stylesheet" href="style.css">
     <title>Product</title>
 </head>
 
 <body>
+    <header>
+        <div class="container">
+
+            <nav>
+                <div class="logo">
+                    <h2>Influencer products</h2>
+                </div>
+                <ul class="list">
+                    <li>Home</li>
+                    <li>Product</li>
+                    <li>Sign Up</li>
+                    <li>Login </li>
+                    <li><i class="fas fa-search"></i></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <!-- hero section -->
     <section>
         <div class="container">
             <div class="full">
