--- a/index.html
+++ b/index.html
@@ -70,7 +70,97 @@
             <h2 class="blo-title">Popular Collection</h2>
             <article class="blogs-title">
                 <div class="media">
-                    <img src="image/tripod.png" alt="">
+                    <img src="image/drone.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/gear.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$150.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/lights.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$250.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/mic.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$350.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/setup.png" alt="">
+                    <h2 class="blog-title">Flex Tripod</h2>
+                    <p class="price">$50.48</p>
+                    <div class="icon-star">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <span class="rate">4.5</span>
+                        <p class="product-desc">
+                            Wordwide shifting <br>
+                            available <br>
+                            Buyers protection possible!
+                        </p>
+                    </div>
+                </div>
+                <div class="media">
+                    <img src="image/single-light.png" alt="">
                     <h2 class="blog-title">Flex Tripod</h2>
                     <p class="price">$50.48</p>
                     <div class="icon-star">
@@ -106,97 +196,7 @@
                     </div>
                 </div>
                 <div class="media">
-                    <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
-                    <div class="icon-star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rate">4.5</span>
-                        <p class="product-desc">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="media">
-                    <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
-                    <div class="icon-star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rate">4.5</span>
-                        <p class="product-desc">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="media">
-                    <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
-                    <div class="icon-star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rate">4.5</span>
-                        <p class="product-desc">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="media">
-                    <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
-                    <div class="icon-star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rate">4.5</span>
-                        <p class="product-desc">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="media">
-                    <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
-                    <div class="icon-star">
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <i class="fas fa-star"></i>
-                        <span class="rate">4.5</span>
-                        <p class="product-desc">
-                            Wordwide shifting <br>
-                            available <br>
-                            Buyers protection possible!
-                        </p>
-                    </div>
-                </div>
-                <div class="media">
-                    <img src="image/tripod.png" alt="">
+                    <img src="image/camera.png" alt="">
                     <h2 class="blog-title">Flex Tripod</h2>
                     <p class="price">$50.48</p>
                     <div class="icon-star">
