--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
                 <div class="media">
                     <img src="image/gear.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
+                    <h2 class="blog-title">Photoshoot set</h2>
                     <p class="price">$150.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
@@ -107,7 +107,7 @@
                 </div>
                 <div class="media">
                     <img src="image/lights.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
+                    <h2 class="blog-title">Airbuds</h2>
                     <p class="price">$250.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
@@ -125,7 +125,7 @@
                 </div>
                 <div class="media">
                     <img src="image/mic.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
+                    <h2 class="blog-title">Microphone</h2>
                     <p class="price">$350.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
@@ -143,7 +143,7 @@
                 </div>
                 <div class="media">
                     <img src="image/setup.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
+                    <h2 class="blog-title">Light Setup</h2>
                     <p class="price">$50.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
@@ -161,7 +161,7 @@
                 </div>
                 <div class="media">
                     <img src="image/single-light.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
+                    <h2 class="blog-title">Vlogging Camera</h2>
                     <p class="price">$50.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
@@ -179,8 +179,8 @@
                 </div>
                 <div class="media">
                     <img src="image/tripod.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
+                    <h2 class="blog-title">Green Screen</h2>
+                    <p class="price">$650.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -197,8 +197,8 @@
                 </div>
                 <div class="media">
                     <img src="image/camera.png" alt="">
-                    <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
+                    <h2 class="blog-title">Action Camera</h2>
+                    <p class="price">$950.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
@@ -216,7 +216,7 @@
                 <div class="media">
                     <img src="image/tripod.png" alt="">
                     <h2 class="blog-title">Flex Tripod</h2>
-                    <p class="price">$50.48</p>
+                    <p class="price">$850.48</p>
                     <div class="icon-star">
                         <i class="fas fa-star"></i>
                         <i class="fas fa-star"></i>
